Updating header section styling

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
  <body>
-   <h1>CLASSICAL MUSIC BANDS</h1>
+   <section>
+    <h1>CLASSICAL MUSIC BANDS</h1>
   
-    <p>Welcome to the world of Classical Music.I personally likes Classical Music a lot. Hope you will enjoy it as well.</p>
-  <p>Here is a some of my favorite Classical Music Bands</p>
+    <p>Welcome to the world of Classical Music.I personally likes Classical Music a lot. Hope you will enjoy it as well. This page contains 
+      some selected music bands which are my favorite</p>
+   </section>
+   
   <ul class="header">
 
       <li><a href="#kool">Kool & The Gang</a></li>
