It will update images

--- a/kool.html
+++ b/kool.html
@@ -75,7 +75,7 @@
             <div id="intro">
                 <h4>Robert Bell</h4>
                 <p>Robert Earl "Kool" Bell (born October 8, 1950), also known by his Muslim name Muhammad Bayyan,is an American musician,singer and songwriter. He is one .
-                  of the founding members of the Band.  Bell was born in Youngstown, Ohio and grew up in Jersey City, New Jersey. Along with his brother, Ronald Bell, he began playing jazz, 
+                  of the founding members of the Band.  Bell was born in Youngstown, Ohio and grew up in Jersey City, New Jersey. Along with his brother, Ronald Bell,he began playing jazz, 
                   and in 1964 they formed a group named the "Jazziacs". They began playing at clubs in New York City under a series of different band names, 
                   before settling on the name <em>Kool & the Gang</em>in 1968. He was one of the co-writers of the song <em>Boardmeeting</em>from the 2007
                    album <em>Timbaland Presents Shock Value</em> .</p>      
@@ -92,18 +92,16 @@
                   arranger, producer, saxophonist and co-founding member of <em>Kool & the Gang.</em>  The band recorded nine No. 1 R&B singles in the 1970s and 80s, 
                   including its No. 1 pop single <em>Celebration</em>. The group is honored on the Hollywood Walk of Fame and was inducted
                    into the Songwriters Hall of Fame.</p>
-                   <p>Ronald Bell composed, arranged, produced and performed some of the most popular music.He was a self-taught musician, and his 
+                   <p>Ronald Bell composed, arranged, produced and performed some of the most popular music.He was aself-taught musician, and his 
                      distinctive sound is on the group's horn lines, bass, synthesizer and vocals. He wrote and produced many of the <em>Kool & the Gang's</em>  
-                     songs, including <em>Celebration, Cherish, Jungle Boogie,Summer Madness,</em>  and <em>Open Sesame</em>.</p>
-                    
-        
+                     songs, including <em>Celebration,Cherish,Jungle Boogie,Summer Madness,</em>and <em>Open Sesame</em>.</p>
                     <p>
                       Bell died at his home in the United States Virgin Islands on September 9, 2020, at age 68.No cause was given, but the death was 
                       described as sudden.
                     </p>
             </div>
             <div id="list">
-                <img src="https://static01.nyt.com/images/2020/09/12/obituaries/10Bell1/merlin_176809179_a57b53cd-9ead-48e7-9d2b-741dd75ee787-superJumbo.jpg?quality=90&auto=webp" alt="Ronald Bell"><br>
+                <img src="music/kool/ronald .jpg" alt="Ronald Bell"><br>
                 <span style="font-style: italic; font-size: 12;">Ronald Bell</span>
             </div>
         </div>
