--- a/london.html
+++ b/london.html
@@ -19,7 +19,7 @@
            <div id="container">
                <div id="intro">
                     <!--Introduction to Londonbeat band-->
-           <h2>Londonbeat</h2>
+           <h2>The Londonbeat</h2>
            <P>Londonbeat is a British-American dance-pop band who scored a number of pop and dance hits in the early 1990s. 
              Band members are American Jimmy Helms who also had a successful solo career and sang radio jingles for Radio Hallam 
              and Hereward Radio in the UK, Jimmy Chambers who was borned on  29 January 1946, from Trinidad, and Charles Pierre. Former
@@ -124,7 +124,7 @@
                     
                     <p>
                      He has worked with several of the most highly respected and celebrated artists and enjoyed learning and continues to learn, from 
-                     the best. Celine Dion, Babyface, Vanessa Williams, Michael Bolton, Soul to Soul are just a few of the Artists with whom he has had 
+                     the best. Celine Dion, Babyface,Vanessa Williams, Michael Bolton, Soul to Soul are just a few of the Artists with whom he has had 
                      the honour of working.
                     </p>
                      
