--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>CLASSICAL MUSIC BANDS</h1>
    </div>
    <div id="footer">
-     <span>copyright@favorite-band 2021</span>
+     <span>© 2021 Nicholas Ngetich</span>
    </div>
   </body>
 </html>
