--- a/zapp.html
+++ b/zapp.html
@@ -111,7 +111,7 @@
              </div>
          </div>
              <div id="footer">
-                <span>copyright@favorite-band 2021</span>
+                <span>© 2021 Nicholas Ngetich</span>
               </div>
 </body>
 </html>
